abandoned popovers due to overflow issues; v2 of more compact design, subject and event tags behind tooltips

--- a/style.css
+++ b/style.css
@@ -54,35 +54,43 @@
 
 /* Start: Jana's Additions */
 
-/* Navbar logo left margin (JEB) */
+/* navbar logo left margin (JEB) */
 .navbar .brand {
   margin-left: 10px;
 }
 
-.jumbotron {
-  text-align: center;
+/* prevent navbar from hiding top of page */
+body {
+  padding-top: 60px;
 }
 
 .row-fluid {
   margin: 10px 0px;
 }
 
-#pos_ex h1 {
+#pos_ex h3 {
   color: #468847;
 }
 
-#neg_ex h1 {
+#neg_ex h3 {
   color: #b94a48;
 }
 
-.experiences h1 {
+.experiences h3 {
   text-align: center;
+  margin-top: 0;
+}
+
+.experience {
+  padding: 2px 2px 2px 8px;
 }
 
 .experience-main {
   font-size: 14px;
-  font-weight: bold;
-  color: #9da0a4;
+}
+
+.experience-tags {
+  background-color: #F5F5F5;
 }
 
 .experience .year {
@@ -94,7 +102,7 @@
   font-weight: bold;
   background-color: #F5F5F5;
   border: 1px solid #DDD;
-  color: #9DA0A4;
+  color: #000000;
   -webkit-border-radius: 4px 0 4px 0;
      -moz-border-radius: 4px 0 4px 0;
           border-radius: 4px 0 4px 0;
@@ -109,12 +117,13 @@
   font-weight: bold;
   background-color: #F5F5F5;
   border: 1px solid #DDD;
-  color: #9DA0A4;
+  color: #000000;
   -webkit-border-radius: 4px 0 4px 0;
      -moz-border-radius: 4px 0 4px 0;
           border-radius: 4px 0 4px 0;
 }
 
+/* necessary to see tooltips */
 .isotope {
   overflow-x: visible !important;
   overflow-y: visible !important;
